Fixed carousel alignment error

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -255,4 +255,5 @@ body {
     padding-top: 3em;
     padding-left: 1em;
     line-height: 1.42857143;
+    margin: 0px !important;
 }
